--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Communication is Vital</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="public/style.css">
 </head>
 <body>
     <header>
@@ -39,6 +39,6 @@
         <p>Follow us on social media: Facebook | Instagram | Twitter</p>
     </footer>
 
-    <script src="/script.js"></script>
+    <script src="public/script.js"></script>
 </body>
 </html>
